[tool.poetry]
name = "rustmaps.py"
version = "0.1.0"
description = "Wrapper for the rustmaps.com REST API"
authors = ["Ralph Drake <pypi@ralphdrake.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-dependency = "^0.5.1"
pre-commit = "^2.20.0"
flake8-docstrings = "^1.6.0"

[tool.poetry.scripts]
# test = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
