[tool.poetry]
version = "0.2.0"
name = "rustmaps.py"
description = "Wrapper for the rustmaps.com REST API"
readme = "README.md"
authors = ["Ralph Drake <pypi@ralphdrake.com>"]
license = "AGPL-3.0-or-later"
packages = [{include = "rustmaps", from = "src"}]
keywords = ["requests", "api", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
"homepage" = "https://github.com/RalphORama/rustmaps.py/"
"repository" = "https://github.com/RalphORama/rustmaps.py/"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-dependency = "^0.5.1"
pre-commit = "^2.20.0"
flake8-docstrings = "^1.6.0"
setuptools = "^63.1.0"
build = "^0.8.0"
tomli = "^2.0.1"

[tool.poetry.scripts]
# test = "pytest"

[tool.pytest.ini_options]
filterwarnings = [
    "always"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
